Bug 354683 - Clearing Ledger Filter also Clears Status
Summary: Clearing Ledger Filter also Clears Status
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.7.2
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-11-01 11:54 UTC by flywire
Modified: 2019-08-29 00:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1,5.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description flywire 2015-11-01 11:54:13 UTC
I select transactions with Status Erroneous and Filter for the required transactions. When I clear the filter the Status is also cleared and I need to reset it each time.
Clearing the Filter should not affect the Status on the Ledger.

Reproducible: Always

Steps to Reproduce:
1.Select an account ledger
2.Select Status to Erroneous
3. Filter for Record(s)
4.Edit Record(s) etc
5. Clear Filter
6. Note that Status is also cleared.

Actual Results:  
Status is cleared.

Expected Results:  
Clearing the Filter should not affect the Status selected.

Retain the Status unless the user changes it. After the ledger is closed then when reopened it should revert to the last setting used in the ledger (eg Erroneous).
Comment 1 Ralf Habacker 2017-06-27 14:22:11 UTC
Git commit 1c465675f644a8b5b9a9e52eb46de2a86a0e805c by Ralf Habacker.
Committed on 27/06/2017 at 14:21.
Pushed by habacker into branch '4.8'.

Fix 'Clearing Ledger Filter also Clears Status'.
FIXED-IN:4.8.1

M  +0    -2    kmymoney/widgets/registersearchline.cpp

https://commits.kde.org/kmymoney/1c465675f644a8b5b9a9e52eb46de2a86a0e805c