Fix 'Clearing Ledger Filter also Clears Status'.

BUG:354683
FIXED-IN:4.8.1